A lot of stuff (final solutions)

--- a/experiments/catboost_1/catboost_fat_data_concat.ipynb
+++ b/experiments/catboost_1/catboost_fat_data_concat.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 130,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:54:19.630445Z",
-     "start_time": "2019-01-26T06:54:19.094429Z"
+     "end_time": "2019-02-03T09:18:03.299747Z",
+     "start_time": "2019-02-03T09:18:03.295715Z"
     }
    },
    "outputs": [],
@@ -18,54 +18,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 143,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:08:24.786557Z",
-     "start_time": "2019-01-26T06:08:23.843686Z"
+     "end_time": "2019-02-03T10:11:54.840145Z",
+     "start_time": "2019-02-03T10:11:54.037820Z"
     }
    },
    "outputs": [],
    "source": [
-    "data = pd.read_hdf(\"data/all_train_data.hdf\")\n",
-    "target_labels = pd.read_hdf(\"data/train_labels.hdf\")"
+    "data = pd.read_hdf(\"../../data/all_train_data.hdf\")\n",
+    "target_labels = pd.read_hdf(\"../../data/train_labels.hdf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 144,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:08:25.488310Z",
-     "start_time": "2019-01-26T06:08:25.468957Z"
+     "end_time": "2019-02-03T10:11:54.845010Z",
+     "start_time": "2019-02-03T10:11:54.841637Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((5445705, 89), (5445705, 2))"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape, target_labels.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-03T10:11:55.007665Z",
+     "start_time": "2019-02-03T10:11:54.846236Z"
     }
    },
    "outputs": [],
    "source": [
-    "abs_weights = np.abs(target_labels.weight)"
+    "target_labels.loc[target_labels['weight'] < 0, 'label'] = 1 - target_labels.loc[target_labels['weight'] < 0, 'label']\n",
+    "target_labels.loc[target_labels['weight'] < 0, 'weight'] = - target_labels.loc[target_labels['weight'] < 0, 'weight']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 146,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:54:28.443914Z",
-     "start_time": "2019-01-26T06:54:28.440586Z"
+     "end_time": "2019-02-03T10:11:55.011542Z",
+     "start_time": "2019-02-03T10:11:55.009265Z"
     }
    },
    "outputs": [],
    "source": [
-    "model = catboost.CatBoostClassifier(iterations=1024, max_depth=8, thread_count=8, verbose=False)"
+    "model = catboost.CatBoostClassifier(iterations=800, max_depth=7, thread_count=12, verbose=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 147,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:37:54.841337Z",
-     "start_time": "2019-01-26T06:10:32.769895Z"
+     "end_time": "2019-02-03T10:35:10.902797Z",
+     "start_time": "2019-02-03T10:11:55.099342Z"
     }
    },
    "outputs": [
@@ -803,24 +829,6 @@
        "                            self.setTraceVisibility(trace, false);\n",
        "                        });\n",
        "                        self.filterTracesOne(traces, {cv_stddev_last: true}).forEach(function(trace) {\n",
-       "                            self.setTraceVisibility(trace, false);\n",
-       "                        });\n",
-       "\n",
-       "                        self.filterTracesEvery(traces, this.getTraceDefParams({type: 'learn', cv_avg: true})).forEach(function(trace) {\n",
-       "                            self.setTraceVisibility(trace, false);\n",
-       "                        });\n",
-       "                        self.filterTracesEvery(traces, this.getTraceDefParams({type: 'test', cv_avg: true})).forEach(function(trace) {\n",
-       "                            self.setTraceVisibility(trace, false);\n",
-       "                        });\n",
-       "\n",
-       "                        self.filterTracesEvery(traces, this.getTraceDefParams({type: 'learn', cv_avg: true, smoothed: true})).forEach(function(trace) {\n",
-       "                            self.setTraceVisibility(trace, false);\n",
-       "                        });\n",
-       "                        self.filterTracesEvery(traces, this.getTraceDefParams({type: 'test', cv_avg: true, smoothed: true})).forEach(function(trace) {\n",
-       "                            self.setTraceVisibility(trace, false);\n",
-       "                        });\n",
-       "\n",
-       "                        self.filterTracesEvery(traces, this.getTraceDefParams({type: 'test', cv_avg: true, best_point: true})).forEach(function(trace) {\n",
        "                            self.setTraceVisibility(trace, false);\n",
        "                        });\n",
        "                    }\n",
@@ -2061,7 +2069,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9dbae69a65b4f20a3f9c10e31ab2ef0",
+       "model_id": "fbe514a1e0d54316950ccd5e58c5ee5b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2075,32 +2083,30 @@
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostClassifier at 0x19efb10f0>"
+       "<catboost.core.CatBoostClassifier at 0x7f044bcd8080>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(data, target_labels.label, sample_weight=abs_weights, plot=True)"
+    "model.fit(data, target_labels.label, sample_weight=target_labels.weight, plot=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 148,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:41:04.806727Z",
-     "start_time": "2019-01-26T06:41:04.792571Z"
+     "end_time": "2019-02-03T10:35:10.925867Z",
+     "start_time": "2019-02-03T10:35:10.904217Z"
     }
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.makedirs(\"experiments/catboost_1/\")\n",
-    "model.save_model(\"experiments/catboost_1/model\")"
+    "model.save_model(\"model\")"
    ]
   },
   {
@@ -2112,39 +2118,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 149,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:54:43.860264Z",
-     "start_time": "2019-01-26T06:54:43.851254Z"
+     "end_time": "2019-02-03T10:35:10.939075Z",
+     "start_time": "2019-02-03T10:35:10.927820Z"
     }
    },
    "outputs": [],
    "source": [
-    "model = model.load_model(\"experiments/catboost_1/model\")"
+    "model = model.load_model(\"model\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 150,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:55:02.236912Z",
-     "start_time": "2019-01-26T06:55:01.679672Z"
+     "end_time": "2019-02-03T10:35:11.054527Z",
+     "start_time": "2019-02-03T10:35:10.940950Z"
     }
    },
    "outputs": [],
    "source": [
-    "test_data = pd.read_hdf(\"data/all_test_data.hdf\")"
+    "test_data = pd.read_hdf(\"../../data/all_test_data.hdf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 151,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:55:37.108602Z",
-     "start_time": "2019-01-26T06:55:26.429253Z"
+     "end_time": "2019-02-03T10:35:16.010954Z",
+     "start_time": "2019-02-03T10:35:11.055898Z"
     }
    },
    "outputs": [],
@@ -2154,11 +2160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 152,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:57:08.380428Z",
-     "start_time": "2019-01-26T06:57:06.787891Z"
+     "end_time": "2019-02-03T10:35:17.404552Z",
+     "start_time": "2019-02-03T10:35:16.012455Z"
     }
    },
    "outputs": [],
@@ -2169,11 +2175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 153,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:57:25.822925Z",
-     "start_time": "2019-01-26T06:57:25.590146Z"
+     "end_time": "2019-02-03T10:35:17.574307Z",
+     "start_time": "2019-02-03T10:35:17.405991Z"
     }
    },
    "outputs": [],
@@ -2183,11 +2189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 154,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-26T06:57:29.858874Z",
-     "start_time": "2019-01-26T06:57:29.851408Z"
+     "end_time": "2019-02-03T10:35:17.581455Z",
+     "start_time": "2019-02-03T10:35:17.575719Z"
     }
    },
    "outputs": [
@@ -2220,27 +2226,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.935046</td>\n",
+       "      <td>0.930356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.442164</td>\n",
+       "      <td>0.732041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>0.959250</td>\n",
+       "      <td>0.830793</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>0.838149</td>\n",
+       "      <td>0.746686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>0.810350</td>\n",
+       "      <td>0.863267</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2248,14 +2254,14 @@
       ],
       "text/plain": [
        "   id  prediction\n",
-       "0   0    0.935046\n",
-       "1   1    0.442164\n",
-       "2   2    0.959250\n",
-       "3   3    0.838149\n",
-       "4   4    0.810350"
+       "0   0    0.930356\n",
+       "1   1    0.732041\n",
+       "2   2    0.830793\n",
+       "3   3    0.746686\n",
+       "4   4    0.863267"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2288,7 +2294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
